--- a/src/documentation/views/index.njk
+++ b/src/documentation/views/index.njk
@@ -14,7 +14,7 @@
         {% if option.allowedValues %}
         <div>Allowed: {{ option.allowedValues }}</div>
         {% endif %}
-        <div>Default: {{ option.default }}</div>
+        <div>Default: {{ option.defaultValue }}</div>
         {% if option.hints and option.hints.length %}
         Hints:
         <ul>
