--- a/src/documentation/views/index.njk
+++ b/src/documentation/views/index.njk
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>TSConfig tuning helper</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css"/>
+    <link rel="stylesheet" href="/styles/normalize.css"/>
+    <link rel="stylesheet" href="/styles/markdown.css"/>
+    <link rel="stylesheet" href="/styles/index.css"/>
   </head>
   <body>
     <div class="markdown-body">
