--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -22,9 +22,9 @@ body {
     box-sizing: border-box;
 }
 .content {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-column-gap: 32px;
+    grid-column-gap: 32px; */
 }
 .flag-block {
     background: #fff;
@@ -109,12 +109,4 @@ body {
     font-size: 12px;
     margin-bottom: 0;
     margin-left: 8px;
-}
-
-
-
-.examples-block {
-    background: #fff;
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
 }
