--- a/src/documentation/views/index.njk
+++ b/src/documentation/views/index.njk
@@ -26,7 +26,12 @@
               <p><img src="/images/icons/bulb.svg" alt="bulb icon"/> Hints:</p>
               <ul>
                 {% for hint in option.hints %}
-                <li><img src="/images/icons/bullet.svg" alt=""/> {{ hint }}</li>
+                <li>
+                  <img src="/images/icons/bullet.svg" alt=""/> {{ hint.brief }}
+                  {% if hint.text %}
+                  <div>{{ hint.text }}</div>
+                  {% endif %}
+                </li>
                 {% endfor %}
               </ul>
             </div>
@@ -49,4 +54,8 @@
       </div>
     </div>
   </body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
+  {# <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/languages/typescript.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/languages/json.min.js"></script> #}
 </html>
